--- a/src/styles/responsiveDesignersArt.css
+++ b/src/styles/responsiveDesignersArt.css
@@ -20,7 +20,7 @@
       grid-row: 2;
       grid-column: 2 / span 3;
       align-self: start;
-      margin-top: 10px;
+      margin-top: 50px;
       /* margin-bottom: -50px; */
   }
 
@@ -34,6 +34,7 @@
       grid-column: 3;
       justify-self: center;
       align-self: end;
+      margin-bottom: 30px;
   }
 
   #daBG {
@@ -110,7 +111,7 @@
         font-size: 25px;
         /* font-size: 6.6815144766147VW;  */
         align-self: start;
-        margin-top: 0;
+        margin-top: 15px;
     }
 
     #daTitleDescription {
@@ -163,21 +164,23 @@
         grid-column: 1 / span 3;
         font-size: 20px;
         align-self: start;
-        margin-top: 0;
+        margin-top: 15px;
     }
 
     #daTitleDescription {
         grid-column: 1 / span 3;
         grid-row: 2;
-        align-self: center;
+        align-self: end;
         font-size: 13px;
         margin-left: 10px;
         margin-top: -10px;
     }
 
     #arr1 {
-        grid-column: 3;
+        grid-column: 3 / span 4;
         align-self: end;
+        justify-self: center;
+        margin-bottom: 25px;
     }
 
     #daBG {
